# vd_agent

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile.am  NEWS  README  README.md  configure.ac  package_macos.sh
.github/workflows/: build.yaml
data/: com.redhat.spice.vdagent.plist  com.redhat.spice.vdagentd.plist  spice-vdagent.desktop  spice-vdagent.service  spice-vdagentd.service  spice-vdagentd.socket
data/install_scripts/: postinstall
src/: udscs.c  udscs.h  vdagent-connection.c  vdagent-connection.h  vdagentd-proto.h
src/darwin/: Vdagent.swift  vdagent.c  vdagent.h
src/darwin/include/: config.h
src/vdagent/: audio.c  clipboard.c  clipboard.h  device-info.c  device-info.h  display.c  display.h  file-xfers.c  file-xfers.h  mutter.c  vdagent.c  x11-priv.h  x11-randr.c  x11.c  x11.h
src/vdagentd/: console-kit.c  dummy-session-info.c  systemd-login.c  uinput.c  vdagentd.c  virtio-port.c  virtio-port.h  xorg-conf.c
tests/: test-file-xfers.c  test-session-info.c  test-termination.c
vd_agent.xcodeproj/: project.pbxproj
vd_agent.xcodeproj/xcshareddata/xcschemes/: spice-vdagent.xcscheme  spice-vdagentd.xcscheme
